--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@
                                 <i class="far fa-copy"></i> Copy
                             </button>
                         </div>
-                        <p>This will download and run our automated fix script.</p>
+                        <p>This will start the fixing process.</p>
                     </div>
                 </div>
                 <div class="tutorial-item">
